--- a/notas/09-2-redes-conv-texto.Rmd
+++ b/notas/09-2-redes-conv-texto.Rmd
@@ -32,6 +32,7 @@ red toma la sucesión de palabras y sustituye para cada palabra un vector de dim
 ```{r, message=FALSE, warning=FALSE}
 library(tidyverse)
 library(keras)
+use_session_with_seed(142, disable_parallel_cpu = FALSE)
 textos <- c("el gato no corre", "el gato corre", "el perro no corre", "el perro corre",
             "el perro duerme", "el perro no duerme", "el gato duerme", "un gato que corre",
             "un gato corre")
@@ -124,7 +125,7 @@ Y finalmente ponemos una capa densa al final, que solo tiene dos entradas. Este 
 modelo_ft <- keras_model_sequential()
 modelo_ft %>% 
   layer_embedding(output_dim = 2, input_dim = 7, input_length = 4,
-                  embeddings_regularizer = regularizer_l2(0.2)) %>% 
+                  embeddings_regularizer = regularizer_l2(0.05)) %>% 
   layer_global_average_pooling_1d() %>% 
   layer_dense(units = 1, activation = "sigmoid")
 predict(modelo_ft, textos_seq_relleno) %>% round(3)
@@ -135,15 +136,15 @@ Que son las probabilidades para cada uno de los textos. La arquitectura del mode
 modelo_ft
 ```
 
-Ahora podemos intentar hacer un detector de gatos que corren rápido:
+Ahora podemos intentar hacer un detector de gatos que corren:
 
 ```{r}
 y <- c(0, 1, 0, 0,0,0,0,1,1)
 compile(modelo_ft, loss = 'binary_crossentropy',
       optimizer = optimizer_sgd(lr = 0.5))
 historia <- fit(modelo_ft, textos_seq_relleno, y, 
-      epochs = 100, batch_size = 9, verbose = 0)
-predict(modelo_ft, textos_seq_relleno)
+      epochs = 500, batch_size = 9, verbose = 0)
+predict(modelo_ft, textos_seq_relleno) %>% round(2)
 ```
 
 Examinamos los pesos obtenidos:
@@ -157,7 +158,7 @@ Interpreta las dimensiones que aprendimos, y explica cómo funciona esta red.
 
 
 
-## Convolución en 1 dimensión
+## Filtros convolucionales en 1 dimensión
 
 Ahora podemos probar haciendo convoluciones a lo largo del texto. La idea es:
 
@@ -198,7 +199,7 @@ modelo_ft %>%
 
 ```{r}
 compile(modelo_ft, loss = 'binary_crossentropy',
-      optimizer = optimizer_sgd(lr = 0.05))
+      optimizer = optimizer_sgd(lr = 0.01))
 historia <- fit(modelo_ft, textos_entrena, y, 
       epochs = 1000, batch_size = length(textos_entrena), 
       verbose = 0)
@@ -274,11 +275,12 @@ model %>% compile(
   metrics = "accuracy"
 )
 
-model %>%
+historia <- model %>%
   fit(
     x_train, y_train,
     batch_size = 32,
     epochs = 2,
     validation_data = list(x_test, y_test)
   )
+historia
 ```
